ghc-4335c07/testsuite/tests/rename/should_compile/rn068.hs
module Foo where

data A = A1 { a, b :: Int }
       | A2 { a, b :: Int }
       | A3 { a, b :: Int }
