ghc-4335c07/testsuite/tests/rename/should_fail/T6148.hs
module T6148 where

a = (0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,
         0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0)


b = (,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,)

data T = T

c :: (,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,) 
     T T T T T T T T T T T T T T T T T T T T T T T T T T T T T T
     T T T T T T T T T T T T T T T T T T T T T T T T T T T T T T
     T T T
c = c
